--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -87,6 +87,10 @@ start esx_addoninventory
 start esx_billing
 start esx_vehicleshop
 start esx_menu_default
+start esx_property
+start esx_datastore
+start esx_barbershop
+start esx_garage
 
 ## hud ##
 start angelsrp_hud
