--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -91,6 +91,12 @@ start esx_property
 start esx_datastore
 start esx_barbershop
 start esx_garage
+start esx_clotheshop
+start esx_extraitems
+start esx_joblisting
+start esx_jobs
+start esx_shops
+start esx_skin
 
 ## hud ##
 start angelsrp_hud
