--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -97,6 +97,10 @@ start esx_joblisting
 start esx_jobs
 start esx_shops
 start esx_skin
+start esx_atm
+start esx_dmvschool
+start esx_license
+start esx_weaponshop
 
 ## hud ##
 start angelsrp_hud
