--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -93,14 +93,19 @@ start esx_barbershop
 start esx_garage
 start esx_clotheshop
 start esx_extraitems
-start esx_joblisting
 start esx_jobs
+start esx_joblisting
 start esx_shops
 start esx_skin
 start esx_atm
 start esx_dmvschool
 start esx_license
 start esx_weaponshop
+start esx_policejob
+start esx_taxijob
+start esx_identity
+start esx_service
+start esx_ambulancejob
 
 ## hud ##
 start angelsrp_hud
