--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -105,6 +105,7 @@ start esx_taxijob
 start esx_identity
 start esx_service
 start esx_ambulancejob
+start esx_policejob
 
 ## hud ##
 start angelsrp_hud
