--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -106,6 +106,7 @@ start esx_identity
 start esx_service
 start esx_ambulancejob
 start esx_policejob
+start ProjectZer0_comisaria
 
 ## hud ##
 start angelsrp_hud
