--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -107,6 +107,7 @@ start esx_service
 start esx_ambulancejob
 start esx_policejob
 start ProjectZer0_comisaria
+start ProjectZer0_ComisariaPaletoPD
 
 ## hud ##
 start angelsrp_hud
