--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -108,6 +108,7 @@ start esx_ambulancejob
 start esx_policejob
 start ProjectZer0_comisaria
 start ProjectZer0_ComisariaPaletoPD
+start ProjectZer0_ComisariaSandyPD
 
 ## hud ##
 start angelsrp_hud
