--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -109,6 +109,7 @@ start esx_policejob
 start ProjectZer0_comisaria
 start ProjectZer0_ComisariaPaletoPD
 start ProjectZer0_ComisariaSandyPD
+start hospital
 
 ## hud ##
 start angelsrp_hud
