--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -106,10 +106,7 @@ start esx_identity
 start esx_service
 start esx_ambulancejob
 start esx_policejob
-start ProjectZer0_comisaria
-start ProjectZer0_ComisariaPaletoPD
-start ProjectZer0_ComisariaSandyPD
-start hospital
+start esx_carlock
 
 ## hud ##
 start angelsrp_hud
@@ -118,3 +115,8 @@ start esx_addonaccount
 start esx_society
 start LegacyFuel
 start pk_onlinejobs
+
+## PojectZerogcPhone ##
+start esx_addons_gcphone
+start gcphone
+start vdk_call
