--- a/server-data/server.cfg
+++ b/server-data/server.cfg
@@ -107,6 +107,7 @@ start esx_service
 start esx_ambulancejob
 start esx_policejob
 start esx_carlock
+start esx_coords
 
 ## hud ##
 start angelsrp_hud
